--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plantilla de Formulas</title>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous"
+    />
 </head>
 <body>
     <select name="" id="FormulaList">
@@ -19,12 +30,15 @@
     <br>
     <button id="SaveFormula">Guardar Formula</button>
     <br>
-    <div class="" id="Inputs">
-
+    <div class="row row-cols-1 row-cols-md-3 g-4" id="Inputs" style="margin-top: 10px; padding-top: 10px;">
+        
     </div>
     <br>
     <div class="" id="Result">
 
     </div>
+
+    <script src="js/NewInputs.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
