--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     </select>
     <br>
-    <button id="DeleteFormula" onclick="">Eliminar Formula</button>
+    <button id="DeleteFormula">Eliminar Formula</button>
     <br>
     <input type="text" name="" id="Formula_Name">
     <br>
@@ -38,6 +38,7 @@
 
     </div>
 
+    <script src="js/Operations.js"></script>
     <script src="js/NewInputs.js"></script>
     <script src="js/index.js"></script>
 </body>
